# moonbetting

./: EDA.ipynb  README.md  pyproject.toml
data/bettings/Season-2022-2023/: D1.csv  E0.csv  EC.csv  G1.csv
moonbetting/: utils.py
