[tool.poetry]
name = "moonbetting"
version = "0.1.0"
description = ""
authors = ["Jens Peder Meldgaard <jenspederm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"
pandas = "^1.5.3"
pandasql = "^0.7.3"
ipykernel = "^6.21.2"
beautifulsoup4 = "^4.11.2"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
